# HackAI-Techfest

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: .env.example  currencies.pkl  data.json  index.py  main.py
src/agents/: exchange.py  notify.py  user.py
src/messages/: basic.py
src/pages/: create.py  update.py
src/templates/: a.html  email-template.html
src/ui/: index.py
src/ui/pages/: create.py
src/utils/: api_utils.py  email_utils.py
